<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_empty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/spacing_32"
    android:visibility="gone">

    <ImageView
        android:id="@+id/iv_empty_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_food_placeholder"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_empty_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:text="@string/empty_feed_title"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_empty_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:text="@string/empty_feed_message"
        android:textAlignment="center"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/text_size_body" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_empty_action"
        style="@style/Widget.FoodHero.Button.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_24"
        android:text="@string/refresh" />
</LinearLayout>
