<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_foodhero_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4"
            android:text="@string/tagline"
            android:textColor="@color/colorPrimaryContainer"
            android:textSize="@dimen/text_size_body" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8"
            android:text="@string/campus_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_caption"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progress_splash"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="@dimen/spacing_32"
            android:indeterminateTint="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
